--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -97,6 +97,8 @@
 
 
     <script>
+        checkCookie();
+
         var arr_rides;
         var curr = new Date; // get current date
         var first = curr.getDate() - curr.getDay(); // First day is the day of the month - the day of the week
@@ -303,100 +305,179 @@
 </head>
 <body class="fixed-left">
     <div id="wrapper">
-        <div class="content">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-2">
-                        <h1> עץ הדוחות</h1>
-                        <ul id="myUL">
-                            <li>
-                                <span>לרכז</span>
-                                <ul>
-                                    <li>מתנדבים</li>
-                                    <li>הסעות שבוטלו</li>
-                                </ul>
-                            </li>
-                            <li>
-                                <span>לעמותה</span>
-                                <ul>
-                                    <li><a id="rp_amuta_vls_week">מתנדבים שבועי</a></li>
-                                    <li><a id="rp_amuta_vls_per_pat">מתנדבים - פר חולה</a></li>
-                                    <li><a id="rp_amuta_vls_km">מתנדבים – שנתי</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <span>למתנדב</span>
-                                <ul>
-                                    <li><a id="rp_vl_ride_month">הסעות החודש </a></li>
-                                    <li><a id="rp_vl_ride_year">הסעות השנה </a></li>
-                                </ul>
-                            </li>
-                        </ul>
+        <div class="topbar">
 
+
+
+            <!-- Navbar -->
+            <div class="navbar navbar-default" role="navigation">
+                <div class="container">
+                    <div class="">
+                        <!--Expend/Collaps Side Menue-->
+                        <div class="pull-left">
+                            <button class="button-menu-mobile open-left waves-effect">
+                                <i class="md md-menu"></i>
+                            </button>
+                            <span class="clearfix"></span>
+                        </div>
+
+                        <!-- LOGO -->
+                        <div class="pull-left">
+                            <div class="text-center">
+                                <a href="manageRidePats.html" class="logo"><span>בדרך להחלמה</span></a>
+                            </div>
+                        </div>
+
+
+
+                        <!--Search-->
+                        <!--<form role="search" class="navbar-right app-search pull-right hidden-xs">
+                        <input type="text" placeholder="חיפוש..." class="form-control app-search-input">
+                        <a href=""><i class="fa fa-search"></i></a>
+                    </form>-->
                     </div>
-                    <div class="col-sm-3">
-                        <h1> פרמטרים</h1>
-                        <div id="params_ph"> </div>
-                    </div>
-                    <div class="col-sm-7">
-                        <h1> תצוגה מקדימה</h1>
-                        <div id="div_weeklyRides" style="display:none" class="card-box table-responsive">
-                            <table id="weeklyRides" class="table table-striped table-bordered">
-                                <thead>
-                                    <tr>
-                                        <th title="Date & Day" class="dateCustomWidth">תאריך ויום</th>
-                                        <th title="Time" class="timeCustomWidth">שעה</th>
-                                        <th title="نقطة الانطلاق Origin">מוצא</th>
-                                        <th title="نقطة الوصول Destination">יעד</th>
-                                        <th title="المريض Patient">החולה</th>
-                                    </tr>
-                                </thead>
-                                <tbody></tbody>
-                            </table>
+                    <!--/.nav-collapse -->
+                </div>
+            </div>
+        </div>
+        <div class="left side-menu">
+
+            <div class="sidebar-inner slimscrollleft">
+
+                <div id="sidebar-menu">
+
+                    <ul>
+                        <li>
+                            <a href="viewVolunteer.html" class="waves-effect waves-primary">
+                                <i class="md md-person"></i><span> ניהול מתנדבים</span>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="viewPatient.html" class="waves-effect waves-primary">
+                                <i class="md md-recent-actors"></i><span> ניהול חולים</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="viewRidePats.html" class="waves-effect waves-primary">
+                                <i class="md md-today"></i><span> כל ההסעות</span>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="manageRidePats.html" class="waves-effect waves-primary">
+                                <i class="md md-today"></i><span> ניהול ההסעות שלי</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="waves-effect waves-primary" onclick="deleteCookie()">
+                                <i class="md md-remove-circle-outline"></i><span>התנתקות מהמערכת</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="clearfix"></div>
+                </div>
+
+                <div class="clearfix"></div>
+            </div>
+
+        </div>
+        <div class="content-page">
+
+            <div class="content">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-2">
+                            <h1> עץ הדוחות</h1>
+                            <ul id="myUL">
+                                <li>
+                                    <span>לרכז</span>
+                                    <ul>
+                                        <li>מתנדבים</li>
+                                        <li>הסעות שבוטלו</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <span>לעמותה</span>
+                                    <ul>
+                                        <li><a id="rp_amuta_vls_week">מתנדבים שבועי</a></li>
+                                        <li><a id="rp_amuta_vls_per_pat">מתנדבים - פר חולה</a></li>
+                                        <li><a id="rp_amuta_vls_km">מתנדבים – שנתי</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <span>למתנדב</span>
+                                    <ul>
+                                        <li><a id="rp_vl_ride_month">הסעות החודש </a></li>
+                                        <li><a id="rp_vl_ride_year">הסעות השנה </a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+
                         </div>
-                        <div id="div_table_amuta_vls_week" style="display:none" class="card-box table-responsive">
-                            <table id="table_amuta_vls_week" class="table table-striped table-bordered">
-                                <thead>
-                                    <tr>
-                                        <th title="Region" class="dateCustomWidth">אזור</th>
-                                        <th title="Volunteer" class="timeCustomWidth">מתנדב</th>
-                                    </tr>
-                                </thead>
-                                <tbody></tbody>
-                            </table>
+                        <div class="col-sm-3">
+                            <h1> פרמטרים</h1>
+                            <div id="params_ph"> </div>
                         </div>
-                        <div id="div_table_amuta_vls_per_pat" style="display:none" class="card-box table-responsive">
-                            <table id="table_amuta_vls_per_pat" class="table table-striped table-bordered">
-                                <thead>
-                                    <tr>
-                                        <th title="Date" class="timeCustomWidth">תאריך</th>
-                                        <th title="Volunteer" class="timeCustomWidth">מתנדב</th>
-                                        <th title="Origin" class="timeCustomWidth">מוצא</th>
-                                        <th title="Destionation" class="timeCustomWidth">יעד</th>
-                                    </tr>
-                                </thead>
-                                <tbody></tbody>
-                            </table>
+                        <div class="col-sm-7">
+                            <h1> תצוגה מקדימה</h1>
+                            <div id="div_weeklyRides" style="display:none" class="card-box table-responsive">
+                                <table id="weeklyRides" class="table table-striped table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th title="Date & Day" class="dateCustomWidth">תאריך ויום</th>
+                                            <th title="Time" class="timeCustomWidth">שעה</th>
+                                            <th title="نقطة الانطلاق Origin">מוצא</th>
+                                            <th title="نقطة الوصول Destination">יעד</th>
+                                            <th title="المريض Patient">החולה</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
+                            </div>
+                            <div id="div_table_amuta_vls_week" style="display:none" class="card-box table-responsive">
+                                <table id="table_amuta_vls_week" class="table table-striped table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th title="Region" class="dateCustomWidth">אזור</th>
+                                            <th title="Volunteer" class="timeCustomWidth">מתנדב</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
+                            </div>
+                            <div id="div_table_amuta_vls_per_pat" style="display:none" class="card-box table-responsive">
+                                <table id="table_amuta_vls_per_pat" class="table table-striped table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th title="Date" class="timeCustomWidth">תאריך</th>
+                                            <th title="Volunteer" class="timeCustomWidth">מתנדב</th>
+                                            <th title="Origin" class="timeCustomWidth">מוצא</th>
+                                            <th title="Destionation" class="timeCustomWidth">יעד</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
+                            </div>
+                            <div id="div_table_amuta_vls_km" style="display:none" class="card-box table-responsive">
+                                <table id="table_amuta_vls_km" class="table table-striped table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th title="Date" class="timeCustomWidth">תאריך</th>
+                                            <th title="Volunteer" class="timeCustomWidth">מתנדב</th>
+                                            <th title="Patient" class="timeCustomWidth">חולה</th>
+                                            <th title="Origin" class="timeCustomWidth">מוצא</th>
+                                            <th title="Destionation" class="timeCustomWidth">יעד</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
+                            </div>
+                            <div id="wait" style="display:none;width:69px;height:89px;position:fixed;top:50%;left:50%;padding:2px;">
+                                <img src="../../Media/Wedges-3s-200px.gif" width="64" height="64" />
+                            </div>
+                            <br />
                         </div>
-                        <div id="div_table_amuta_vls_km" style="display:none" class="card-box table-responsive">
-                            <table id="table_amuta_vls_km" class="table table-striped table-bordered">
-                                <thead>
-                                    <tr>
-                                        <th title="Date" class="timeCustomWidth">תאריך</th>
-                                        <th title="Volunteer" class="timeCustomWidth">מתנדב</th>
-                                        <th title="Patient" class="timeCustomWidth">חולה</th>
-                                        <th title="Origin" class="timeCustomWidth">מוצא</th>
-                                        <th title="Destionation" class="timeCustomWidth">יעד</th>
-                                    </tr>
-                                </thead>
-                                <tbody></tbody>
-                            </table>
-                        </div>
-                        <div id="wait" style="display:none;width:69px;height:89px;position:fixed;top:50%;left:50%;padding:2px;">
-                            <img src="../../Media/Wedges-3s-200px.gif" width="64" height="64" />
-                        </div>
-                        <br />
-                    </div>
 
                     </div>
                 </div>
