--- a/Road to Recovery/pages/VolunteerDetails.html
+++ b/Road to Recovery/pages/VolunteerDetails.html
@@ -134,7 +134,7 @@
                         IsDriving: volunteer.IsDriving,
                         HowCanHelp: volunteer.HowCanHelp,
                         Feedback: volunteer.Feedback,
-                        Remarks: volunteer.Remarks,
+                        //Remarks: volunteer.Remarks,
                         NewsLetter: volunteer.NewsLetter,
                         KnowsArabic: volunteer.KnowsArabic,
                         JoinYear: volunteer.JoinYear,
@@ -145,7 +145,7 @@
                         HowToRecruit: volunteer.HowToRecruit,
                         HowKeepInTouch: volunteer.HowKeepInTouch,
                         NewsLetterRemarks: volunteer.NewsLetterRemarks,
-                        GasRemarks: volunteer.GasRemarks,
+                        //GasRemarks: volunteer.GasRemarks,
                         IgulLetova: volunteer.IgulLetova
                     }
                     console.log(volunteerUploaded)
@@ -157,10 +157,10 @@
                     $("#VolunteerIdentity").val(volunteer.VolunteerIdentity);
                     $("#phone1").val(volunteer.CellPhone);
                     if (volunteer.Gender == "מתנדב") {
-                        $("#gender").val("זכר");
+                        $("#gender").val("גבר");
                     }
                     else if (volunteer.Gender == "מתנדבת") {
-                        $("#gender").val("נקבה")
+                        $("#gender").val("אישה")
                     }
                     $("#city").val(volunteer.City);
                     $("#email").val(volunteer.Email);
@@ -186,7 +186,7 @@
                     }
                     $("#help").val(volunteer.HowCanHelp);
                     $("#feedback").val(volunteer.Feedback);
-                    $("#remarks").val(volunteer.Remarks);
+                    //$("#remarks").val(volunteer.Remarks);
                     if (volunteer.NewsLetter == 1) {
                         $("#newsLetter").val("כן");
                     }
@@ -216,7 +216,7 @@
                     $("#howToRecruit").val(volunteer.HowToRecruit);
                     $("#howKeepInTouch").val(volunteer.HowKeepInTouch);
                     $("#newsLetterRemarks").val(volunteer.NewsLetterRemarks);
-                    $("#gasRemarks").val(volunteer.GasRemarks);
+                    //$("#gasRemarks").val(volunteer.GasRemarks);
                     if (volunteer.IgulLetova == 1) {
                         $("#IgulLetova").val("כבר מעגל.ת לטובה");
                     }
@@ -358,8 +358,8 @@
                                     <div class="col-sm-6" id="selectgender">
                                         <select id="gender" name="gender" class="form-control req">
                                             <option>בחר.י</option>
-                                            <option>זכר</option>
-                                            <option>נקבה</option>
+                                            <option>גבר</option>
+                                            <option>אישה</option>
                                         </select>
                                     </div>
                                 </div>
@@ -388,7 +388,7 @@
                         <div class="row m-l-10 m-r-10">
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label class="col-sm-4 control-label">ישוב מגורים&nbsp;<span class="required">*</span></label>
+                                    <label class="col-sm-4 control-label">ישוב מגורים&nbsp;<span class="required">*</span> (התחילו להקליד ואז ביחרו מתוך הרשימה)</label>
                                     <div class="col-sm-6">
                                         <input id="city" name="city" type="text" class="form-control req">
                                     </div>
@@ -461,7 +461,7 @@
                         <div class="row m-l-10 m-r-10">
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label class="col-sm-4 control-label">מעוניין לקבל את העדכון השבועי&nbsp;<span class="required">*</span></label>
+                                    <label class="col-sm-4 control-label">מעוניינ.ת לקבל את העדכון השבועי&nbsp;<span class="required">*</span></label>
                                     <div class="col-sm-6" id="selectNewsLetter">
                                         <select id="newsLetter" name="newsLetter" class="form-control req">
                                             <option>בחר.י</option>
@@ -499,7 +499,7 @@
                         <div class="row m-l-10 m-r-10">
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label class="col-sm-4 control-label">כיצד תוכל.י לעזור לעמותה בדרכים נוספות (נא לפרט)</label>
+                                    <label class="col-sm-4 control-label">הצעות עזרה לעמותה</label>
                                     <div class="col-sm-6">
                                         <!--<input id="help" name="help" type="text" class="form-control">-->
                                         <textarea id="help" name="help" class="form-control textAreaClass" rows="3"></textarea>
@@ -521,18 +521,18 @@
                         <div class="row m-l-10 m-r-10">
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label class="col-sm-4 control-label">הממשק עם החולים</label>
+                                    <label class="col-sm-4 control-label">רשמים מההסעות</label>
                                     <div class="col-sm-6">
                                         <textarea id="workingWithPat" name="workingWithPat" class="form-control textAreaClass" rows="3"></textarea>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <h4>עבודה עם המתנדבים:</h4>
+                        <!--<h4>עבודה עם המתנדבים:</h4>-->
                         <div class="row m-l-10 m-r-10">
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label class="col-sm-4 control-label">איך נגייס עוד מתנדבים</label>
+                                    <label class="col-sm-4 control-label">הצעות לגיוס מתנדבים</label>
                                     <div class="col-sm-6">
                                         <textarea id="howToRecruit" name="howToRecruit" class="form-control textAreaClass" rows="3"></textarea>
                                     </div>
@@ -542,25 +542,25 @@
                         <div class="row m-l-10 m-r-10">
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label class="col-sm-4 control-label">איך נשמור קשר עם המתנדבים</label>
+                                    <label class="col-sm-4 control-label">הצעות לשימור הקשר עם המתנדבים</label>
                                     <div class="col-sm-6">
                                         <textarea id="howKeepInTouch" name="howKeepInTouch" class="form-control textAreaClass" rows="3"></textarea>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <h4>עבודה מול העמותה:</h4>
+                        <!--<h4>עבודה מול העמותה:</h4>-->
                         <div class="row m-l-10 m-r-10">
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label class="col-sm-4 control-label">המכתב השבועי</label>
+                                    <label class="col-sm-4 control-label">משוב על המכתב השבועי</label>
                                     <div class="col-sm-6">
                                         <textarea id="newsLetterRemarks" name="newsLetterRemarks" class="form-control textAreaClass" rows="3"></textarea>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="row m-l-10 m-r-10">
+                        <!--<div class="row m-l-10 m-r-10">
                             <div class="col-sm-6">
                                 <div class="form-group">
                                     <label class="col-sm-4 control-label">החזרי דלק</label>
@@ -569,12 +569,12 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <h4>כללי:</h4>
+                        </div>-->
+                        <!--<h4>כללי:</h4>-->
                         <div class="row m-l-10 m-r-10">
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label class="col-sm-4 control-label">משוב כללי</label>
+                                    <label class="col-sm-4 control-label">הצעות ייעול</label>
                                     <div class="col-sm-6">
                                         <!--<input id="feedback" name="feedback" type="text" class="form-control">-->
                                         <textarea id="feedback" name="feedback" class="form-control textAreaClass" rows="3"></textarea>
@@ -582,18 +582,27 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row m-l-10 m-r-10">
+                        <!--<div class="row m-l-10 m-r-10">
                             <div class="col-sm-6">
                                 <div class="form-group">
                                     <label class="col-sm-4 control-label">הערות</label>
                                     <div class="col-sm-6">
-                                        <!--<input id="remarks" name="remarks" type="text" class="form-control">-->
+
                                         <textarea id="remarks" name="remarks" class="form-control textAreaClass" rows="3"></textarea>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div>-->
                         <hr /><br />
+                        <div class="row m-l-10 m-r-10">
+                            <div class="col-sm-6">
+                                <div class="form-group text-center">
+                                    אנא קרא.י את תקנון האתיקה (<a href="#">הקליק.י פה</a>).<br />
+                                    אנא קרא.י את הוראות הבטיחות (<a href="#">הקליק.י פה</a>).<br />
+
+                                </div>
+                            </div>
+                        </div>
                         <div class="row m-l-10 m-r-10">
                             <div class="col-sm-6">
                                 <div id="saveButton" class="form-group text-center">
@@ -728,10 +737,10 @@
                 var cellPhone = $("#phone1").val();
                 cellPhone = cellPhone.replace(/-/g, '');
                 cellPhone = cellPhone.replace(/ /g, '');
-                if ($("#gender").val() == "זכר") {
+                if ($("#gender").val() == "גבר") {
                     var gender = "מתנדב";
                 }
-                else if ($("#gender").val() == "נקבה") {
+                else if ($("#gender").val() == "אישה") {
                     var gender = "מתנדבת";
                 }
                 var city = $("#city").val();
@@ -749,7 +758,7 @@
                 }
                 var howCanHelp = $("#help").val();
                 var feedback = $("#feedback").val();
-                var remark = $("#remarks").val();
+                //var remark = $("#remarks").val();
                 if ($("#newsLetter").val() == "כן") {
                     var newsLetter = true;
                 }
@@ -776,7 +785,7 @@
                 var howToRecruit = $("#howToRecruit").val();
                 var howKeepInTouch = $("#howKeepInTouch").val();
                 var newsLetterRemarks = $("#newsLetterRemarks").val();
-                var gasRemarks = $("#gasRemarks").val();
+                //var gasRemarks = $("#gasRemarks").val();
                 if ($("#IgulLetova").val() == "כבר מעגל.ת לטובה") {
                     var IgulLetova = true;
                 }
@@ -800,7 +809,7 @@
                     IsDriving: isDriving,
                     HowCanHelp: howCanHelp,
                     Feedback: feedback,
-                    Remarks: remark,
+                    //Remarks: remark,
                     NewsLetter: newsLetter,
                     KnowsArabic: knowsArabic,
                     JoinYear: joinYear,
@@ -811,7 +820,7 @@
                     HowToRecruit: howToRecruit,
                     HowKeepInTouch: howKeepInTouch,
                     NewsLetterRemarks: newsLetterRemarks,
-                    GasRemarks: gasRemarks,
+                    //GasRemarks: gasRemarks,
                     IgulLetova: IgulLetova
                 }
 
@@ -856,10 +865,10 @@
                     var cellPhone = $("#phone1").val();
                     cellPhone = cellPhone.replace(/-/g, '');
                     cellPhone = cellPhone.replace(/ /g, '');
-                    if ($("#gender").val() == "זכר") {
+                    if ($("#gender").val() == "גבר") {
                         var gender = "מתנדב";
                     }
-                    else if ($("#gender").val() == "נקבה") {
+                    else if ($("#gender").val() == "אישה") {
                         var gender = "מתנדבת";
                     }
                     var city = $("#city").val();
@@ -877,7 +886,7 @@
                     }
                     var howCanHelp = $("#help").val();
                     var feedback = $("#feedback").val();
-                    var remark = $("#remarks").val();
+                    //var remark = $("#remarks").val();
                     var displayName = $("#volunteerFirstName").val() + " " + $("#volunteerLastName").val();
                     var englishName = $("#volunteerFirstNameEnglish").val() + " " + $("#volunteerLastNameEnglish").val();
                     if ($("#newsLetter").val() == "כן") {
@@ -906,7 +915,7 @@
                     var howToRecruit = $("#howToRecruit").val();
                     var howKeepInTouch = $("#howKeepInTouch").val();
                     var newsLetterRemarks = $("#newsLetterRemarks").val();
-                    var gasRemarks = $("#gasRemarks").val();
+                    //var gasRemarks = $("#gasRemarks").val();
                     if ($("#IgulLetova").val() == "כבר מעגל.ת לטובה") {
                         var IgulLetova = true;
                     }
@@ -930,7 +939,7 @@
                         IsDriving: isDriving,
                         HowCanHelp: howCanHelp,
                         Feedback: feedback,
-                        Remarks: remark,
+                        //Remarks: remark,
                         DisplayName: displayName,
                         EnglishName: englishName,
                         NewsLetter: newsLetter,
@@ -943,7 +952,7 @@
                         HowToRecruit: howToRecruit,
                         HowKeepInTouch: howKeepInTouch,
                         NewsLetterRemarks: newsLetterRemarks,
-                        GasRemarks: gasRemarks,
+                        //GasRemarks: gasRemarks,
                         IgulLetova: IgulLetova
                     }
                     volunteerUpdated = {
@@ -960,7 +969,7 @@
                         IsDriving: isDriving,
                         HowCanHelp: howCanHelp,
                         Feedback: feedback,
-                        Remarks: remark,
+                        //Remarks: remark,
                         NewsLetter: newsLetter,
                         KnowsArabic: knowsArabic,
                         JoinYear: joinYear,
@@ -971,7 +980,7 @@
                         HowToRecruit: howToRecruit,
                         HowKeepInTouch: howKeepInTouch,
                         NewsLetterRemarks: newsLetterRemarks,
-                        GasRemarks: gasRemarks,
+                        //GasRemarks: gasRemarks,
                         IgulLetova: IgulLetova
                     }
                     console.log(volunteerExtended);
