Added in right-side menu. visuals

--- a/Road to Recovery/pages/menu.html
+++ b/Road to Recovery/pages/menu.html
@@ -52,6 +52,18 @@
                         <span>יומן מערכת</span>
                     </a>
                 </li>
+
+  
+                <li>
+                    <a href="reportsMain.html" class="waves-effect waves-primary">
+                        <i>
+                            <img src="../../Media/יומן מערכת.png" height="25" width="25" />
+                        </i>
+                        <span data-toggle="tooltip" title="Reports" data-placement="left">דוחות</span>
+                    </a>
+
+                </li>
+
                 <li>
                     <a class="waves-effect waves-primary" onclick="deleteCookie()" style="margin-bottom:40%;">
                         <i>
