--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -388,26 +388,26 @@
                         <div class="col-sm-2">
                             <h1> עץ הדוחות</h1>
                             <ul id="myUL">
-                                <li>
-                                    <span>לרכז</span>
-                                    <ul>
-                                        <li>מתנדבים</li>
-                                        <li>הסעות שבוטלו</li>
-                                    </ul>
-                                </li>
+                                <!--  <li>
+          <span>לרכז</span>
+          <ul>
+              <li>מתנדבים</li>
+              <li>הסעות שבוטלו</li>
+          </ul>
+      </li>   -->
                                 <li>
                                     <span>לעמותה</span>
                                     <ul>
-                                        <li><a id="rp_amuta_vls_week">מתנדבים שבועי</a></li>
-                                        <li><a id="rp_amuta_vls_per_pat">מתנדבים - פר חולה</a></li>
-                                        <li><a id="rp_amuta_vls_km">מתנדבים – שנתי</a></li>
+                                        <li><a class="report_link_cls" id="rp_amuta_vls_week">מתנדבים שבועי</a></li>
+                                        <li><a class="report_link_cls" id="rp_amuta_vls_per_pat">מתנדבים - פר חולה</a></li>
+                                        <li><a class="report_link_cls" id="rp_amuta_vls_km">מתנדבים – שנתי</a></li>
                                     </ul>
                                 </li>
                                 <li>
                                     <span>למתנדב</span>
                                     <ul>
-                                        <li><a id="rp_vl_ride_month">הסעות החודש </a></li>
-                                        <li><a id="rp_vl_ride_year">הסעות השנה </a></li>
+                                        <li><a class="report_link_cls" id="rp_vl_ride_month">הסעות החודש </a></li>
+                                        <li><a class="report_link_cls" id="rp_vl_ride_year">הסעות השנה </a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -418,7 +418,7 @@
                             <div id="params_ph"> </div>
                         </div>
                         <div class="col-sm-7">
-                            <h1> תצוגה מקדימה</h1>
+                            <h1 id="report_title"> </h1>
                             <div id="div_weeklyRides" style="display:none" class="card-box table-responsive">
                                 <table id="weeklyRides" class="table table-striped table-bordered">
                                     <thead>
