adding alon's corrention to volunteerdetails

--- a/Road to Recovery/pages/VolunteerDetails.html
+++ b/Road to Recovery/pages/VolunteerDetails.html
@@ -671,7 +671,7 @@
     <script>
 
         $(document).ready(function () {
-            
+
             generateBirthdaySelect()
             generateJoinDateSelect()
 
@@ -1040,6 +1040,8 @@
             let empty = false;
             var counter = 0;
             var checked = $('input[name="ethicsAndSafety"]:checked').length;
+            checked = 2; //THIS LINE WAS ADDED BECAUSE AMIR ASKED THAT THE TWO CHECKBOXES WILL NOT BE MANDATORY **FOR NOW**
+            console.log("checked: " + checked)
             $('.req').each(function () {
                 empty = ($(this).val().length == 0 || $(this).val() == "בחר.י");
 
@@ -1055,6 +1057,9 @@
             else if (checked == 2) {
                 $('#saveCustomer').attr('disabled', false);
                 $('#saveButtonDisabled').hide();
+            } else {
+                $('#saveCustomer').attr('disabled', 'disabled');
+                $('#saveButtonDisabled').show();
             }
         };
 
