--- a/Road to Recovery/pages/VolunteerDetails.html
+++ b/Road to Recovery/pages/VolunteerDetails.html
@@ -574,7 +574,7 @@
                         <div class="row m-l-10 m-r-10">
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label class="col-sm-4 control-label">הצעות ייעול</label>
+                                    <label class="col-sm-4 control-label">הערות</label>
                                     <div class="col-sm-6">
                                         <!--<input id="feedback" name="feedback" type="text" class="form-control">-->
                                         <textarea id="feedback" name="feedback" class="form-control textAreaClass" rows="3"></textarea>
