--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -583,7 +583,7 @@
                                         if (DestIsHospital && !returnDriveExist && isDriver) {
                                             swal({
                                                 title: "הנסיעה נשמרה",
-                                                text: "האם ליצור נסיעת חזור?",
+                                                text: "האם ליצור הסעת החזרה?\n(אפשר לשנות פרטים בהחזרה, ובסוף יש להקיש על מקש שמירה)",
                                                 type: "success",
                                                 //timer: 1000,
                                                 showConfirmButton: true,
