Added option to delete ridepat and return ridepat
From now on, when deleting a ridepat that has a return ridepat - a popup will ask if you wish to delete the return ride as well

--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -177,6 +177,7 @@
 
 
         $(document).ready(function () {
+            GetCoordinatorsList();
             $('#saveCustomer').removeClass("saveHighlight");
             $('#deleteDriver').hide();
             generateDrivers()
@@ -2300,6 +2301,23 @@
             } else {
 
             }
+        }
+
+        function GetCoordinatorsList() {
+            coordList = [];
+            $.ajax({
+                dataType: "json",
+                url: "WebService.asmx/GetCoordinatorsList",
+                contentType: "application/json; charset=utf-8",
+                type: "POST",
+                async: false,
+                success: function (data) {
+                    var coors = JSON.parse(data.d);                    
+                    coordList = coors;
+                    console.log(coordList);
+                },
+                error: function (err) { alert("Error in GetCoordinatorsList: " + err.responseText); }
+            });
         }
     </script>
 </head>
